--- a/WeatherApp/src/main/resources/application.properties
+++ b/WeatherApp/src/main/resources/application.properties
@@ -2,16 +2,16 @@ spring.application.name=WeatherApp
 #
 # Weather DB (Mysql v8) credentials
 #
-spring.datasource.url=jdbc:mysql://localhost:3307/weatherdb
-spring.datasource.username=fiddle
-spring.datasource.password=fiddle123
+spring.datasource.url=jdbc:mysql://localhost:3306/weatherdb
+spring.datasource.username=DB_USER
+spring.datasource.password=DB_PASSWORD
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #
 # Weather Provider: Set API Credentails of www.weatherapi.com
 #
 com.pras.weather.api.provider=WeatherAPI
 com.pras.weather.api.url=https://api.weatherapi.com/v1/current.json
-com.pras.weather.api.key=ea003c8e783543d8b6c124608241112
+com.pras.weather.api.key=YOUR_API_KEY
 #
 # API document (Open API, Swagger). Display swagger as homepage.
 #
