--- a/WeatherApp/src/main/resources/application.properties
+++ b/WeatherApp/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=WeatherApp
 #
 # Weather DB (Mysql v8) credentials
-#
-spring.datasource.url=jdbc:mysql://localhost:3306/weatherdb
-spring.datasource.username=DB_USER
-spring.datasource.password=DB_PASSWORD
+# MYSQL_DB_HOST env variable may be passed by containe (default localhost)
+spring.datasource.url=jdbc:mysql://${MYSQL_DB_HOST:localhost}:3306/weatherdb
+spring.datasource.username=fiddle
+spring.datasource.password=fiddle123
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #
 # Weather Provider: Set API Credentails of www.weatherapi.com
